# nexum-A-1

./: .gitignore  Nexum Protocol — 黑客松设计文档.md  findings.md  nexum-实施方案文档-a.md  progress.md  task_plan.md
.claude/: settings.local.json.tmp.2647.1776262357396
nexum-protocol/: .gitignore  Anchor.toml  Cargo.toml  DEPLOY_NOTES.md  FINAL_AUDIT.md  G9_anchor_test_record.md  KNOWN_ISSUES.md  package-lock.json  package.json
nexum-protocol/app/: next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
nexum-protocol/app/.next/: trace
nexum-protocol/app/public/: balance_transition.wasm  verification_key.json
nexum-protocol/circuits/: build.sh  package-lock.json  package.json
nexum-protocol/circuits/src/: balance_transition.circom
nexum-protocol/circuits/tests/: balance_transition.test.js
nexum-protocol/oracle/: Cargo.toml
nexum-protocol/oracle/src/: decrypt.rs  main.rs
nexum-protocol/programs/audit_gate/: Cargo.toml
nexum-protocol/programs/nexum_pool/: Cargo.toml
nexum-protocol/programs/nexum_pool/src/: alt_bn128.rs  constants.rs  error.rs  lib.rs
nexum-protocol/programs/nexum_pool/src/instructions/: create_user_ledger.rs  deposit.rs  emergency_recover.rs  initialize_pool.rs  mod.rs  settle_atomic.rs  withdraw.rs
nexum-protocol/programs/nexum_pool/src/state/: mod.rs  protocol_config.rs  settlement_record.rs  user_ledger.rs
nexum-protocol/scripts/: deploy_devnet.sh  gen_vk_rs.js  init_protocol.ts  pre_demo_check.sh
nexum-protocol/sdk/: package.json  tsconfig.json
nexum-protocol/sdk/.next/: trace  (+1 more)
nexum-protocol/tests/: nexum-protocol.ts
(+34 files in other folders)
