[package]
name = "nexum-oracle"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "nexum-oracle"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "2.2"
solana-sdk = "2.2"
solana-account-decoder = "2.2"
bs58 = "0.5"
tokio = { version = "1", features = ["full"] }
borsh = "1"
