[package]
name = "nexum_pool"
version = "0.1.0"
description = "Nexum Protocol — Core Pool Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexum_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
solana-define-syscall = "2"
zk_verifier = { path = "../zk_verifier", features = ["cpi"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
